setup client side display data from grahql server side API

--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphql-tut",
+  "name": "server",
   "packageManager": "yarn@4.0.1",
   "dependencies": {
     "@apollo/server": "^4.10.4",
@@ -8,6 +8,6 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "graphql": "^16.8.1"
+    "graphql": "^16.8.2"
   }
 }
