--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-<<<<<<< HEAD
+
 .history/
 client/.yarn/
 client/node_modules/
-=======
-.yarn/*
+.yarn/
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
@@ -19,4 +18,4 @@ client/node_modules/
 .history/
 node_modules/
 yarn.lock
-server/.yarn/install-state.gz
+server/.yarn/
